sort.pancake.BasicPancake.scala.error
Compilation error:
BasicPancake:8: error: not found: value GetRayonCrepe
    min = GetRayonCrepe(i)
          ^